fix gallery on wider/taller phones, maybe fix homepage whitespace as well

--- a/css/css.css
+++ b/css/css.css
@@ -542,7 +542,7 @@ p {
 and (device-width : 414px)
 and (device-height : 896px)
 and (-webkit-device-pixel-ratio : 2) {
-    div {
+    #iphone {
         max-width: 500px;
         overflow: hidden;
     }
@@ -553,7 +553,7 @@ and (-webkit-device-pixel-ratio : 2) {
 and (device-width : 896px)
 and (device-height : 414px)
 and (-webkit-device-pixel-ratio : 2) {
-    div {
+    #iphone {
         max-width: 920px;
         overflow: hidden;
     }
@@ -564,7 +564,7 @@ and (-webkit-device-pixel-ratio : 2) {
 and (device-width : 375px)
 and (device-height : 812px)
 and (-webkit-device-pixel-ratio : 3) {
-    div {
+    #iphone {
         max-width: 400px;
         overflow: hidden;
     }
@@ -575,7 +575,7 @@ and (-webkit-device-pixel-ratio : 3) {
 and (device-width : 812px)
 and (device-height : 375px)
 and (-webkit-device-pixel-ratio : 3) {
-    div {
+    #iphone {
         max-width: 870px;
         overflow: hidden;
     }
@@ -586,7 +586,7 @@ and (-webkit-device-pixel-ratio : 3) {
 and (device-width : 414px)
 and (device-height : 896px)
 and (-webkit-device-pixel-ratio : 3) {
-    div {
+    #iphone {
         max-width: 500px;
         overflow: hidden;
     }
@@ -597,7 +597,7 @@ and (-webkit-device-pixel-ratio : 3) {
 and (device-width : 896px)
 and (device-height : 414px)
 and (-webkit-device-pixel-ratio : 3) {
-    div {
+    #iphone {
         max-width: 920px;
         overflow: hidden;
     }
